chore: update configs for Railway deployment (backend env, Dockerfile, railway.json)

--- a/backend/votingapp/src/main/resources/application.properties
+++ b/backend/votingapp/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=votingapp
-server.port=8080
-#database config
-spring.datasource.url=jdbc:mysql://localhost:3306/votingapp
-spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
+
+# Use Railway-provided environment variables for MySQL
+server.port=${PORT:8080}
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
